# hypermodern-python

./: .flake8  README.md  noxfile.py  pyproject.toml
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py
