[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["chao <versatran01@gmail.com>"]
readme = "README.md"
# packages = [{include = "hypermodern_python"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
