[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["chao <versatran01@gmail.com>"]
readme = "README.md"
# packages = [{include = "hypermodern_python"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.lint.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.2.13"
flake8-import-order = "^0.18.2"
flake8-annotations = "^3.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.0.1"
pytype = {version = "^2023.2.17", python = "3.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 90

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
